fixed bug that avoided to predict neutral

--- a/1_Data Analysis.ipynb
+++ b/1_Data Analysis.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +10,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'src.hyperparameter_tuning' from 'd:\\\\Dokumente\\\\2_Bildung\\\\2_MSc\\\\1_Classes\\\\Y2T2_NLP\\\\3_assignment\\\\NLP-Aspect-Term-Polarity-Classification\\\\src\\\\hyperparameter_tuning.py'>"
+       "<module 'src.hyperparameter_tuning' from 'D:\\\\Dokumente\\\\2_Bildung\\\\2_MSc\\\\1_Classes\\\\Y2T2_NLP\\\\3_assignment\\\\NLP-Aspect-Term-Polarity-Classification\\\\src\\\\hyperparameter_tuning.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -139,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +192,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>positive</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>AMBIENCE#GENERAL</td>\n",
        "      <td>seating</td>\n",
        "      <td>18:25</td>\n",
@@ -203,7 +200,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>positive</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>AMBIENCE#GENERAL</td>\n",
        "      <td>trattoria</td>\n",
        "      <td>25:34</td>\n",
@@ -211,7 +208,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>positive</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>FOOD#QUALITY</td>\n",
        "      <td>food</td>\n",
        "      <td>98:102</td>\n",
@@ -222,10 +219,10 @@
        "</div>"
       ],
       "text/plain": [
-       "          y            aspect target_term target_location  \\\n",
-       "0  positive  AMBIENCE#GENERAL     seating           18:25   \n",
-       "1  positive  AMBIENCE#GENERAL   trattoria           25:34   \n",
-       "2  positive      FOOD#QUALITY        food          98:102   \n",
+       "         y            aspect target_term target_location  \\\n",
+       "0  neutral  AMBIENCE#GENERAL     seating           18:25   \n",
+       "1  neutral  AMBIENCE#GENERAL   trattoria           25:34   \n",
+       "2  neutral      FOOD#QUALITY        food          98:102   \n",
        "\n",
        "                                            sentence  \n",
        "0  short and sweet – seating is great:it's romant...  \n",
@@ -233,7 +230,7 @@
        "2  The have over 100 different beers to offer thi...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +483,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -574,7 +570,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -944,7 +939,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -952,7 +946,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1015,7 +1008,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1023,7 +1015,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1400,9 +1391,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv-nlp",
    "language": "python",
-   "name": "python3"
+   "name": "venv-nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1415,8 +1406,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
