improved preprocessing by using correct tokens

--- a/1_Data Analysis.ipynb
+++ b/1_Data Analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "<module 'src.hyperparameter_tuning' from 'D:\\\\Dokumente\\\\2_Bildung\\\\2_MSc\\\\1_Classes\\\\Y2T2_NLP\\\\3_assignment\\\\NLP-Aspect-Term-Polarity-Classification\\\\src\\\\hyperparameter_tuning.py'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>neutral</td>\n",
+       "      <td>positive</td>\n",
        "      <td>AMBIENCE#GENERAL</td>\n",
        "      <td>seating</td>\n",
        "      <td>18:25</td>\n",
@@ -200,7 +200,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>neutral</td>\n",
+       "      <td>positive</td>\n",
        "      <td>AMBIENCE#GENERAL</td>\n",
        "      <td>trattoria</td>\n",
        "      <td>25:34</td>\n",
@@ -208,7 +208,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>neutral</td>\n",
+       "      <td>positive</td>\n",
        "      <td>FOOD#QUALITY</td>\n",
        "      <td>food</td>\n",
        "      <td>98:102</td>\n",
@@ -219,10 +219,10 @@
        "</div>"
       ],
       "text/plain": [
-       "         y            aspect target_term target_location  \\\n",
-       "0  neutral  AMBIENCE#GENERAL     seating           18:25   \n",
-       "1  neutral  AMBIENCE#GENERAL   trattoria           25:34   \n",
-       "2  neutral      FOOD#QUALITY        food          98:102   \n",
+       "          y            aspect target_term target_location  \\\n",
+       "0  positive  AMBIENCE#GENERAL     seating           18:25   \n",
+       "1  positive  AMBIENCE#GENERAL   trattoria           25:34   \n",
+       "2  positive      FOOD#QUALITY        food          98:102   \n",
        "\n",
        "                                            sentence  \n",
        "0  short and sweet – seating is great:it's romant...  \n",
@@ -230,7 +230,7 @@
        "2  The have over 100 different beers to offer thi...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "4         sentence             0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "2                             Fish is so very fresh.  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "4         sentence             0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "Name: y, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "<Axes: ylabel='aspect'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -574,6 +574,29 @@
    "metadata": {},
    "source": [
     "There is heavy class imbalance with some aspect-sentiment combinations not even being present in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True     767\n",
+       "False    736\n",
+       "Name: sentence, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of sentences that appear at least twice\n",
+    "train.sentence.duplicated(keep = False).value_counts()"
    ]
   },
   {
@@ -607,33 +630,10 @@
     {
      "data": {
       "text/plain": [
-       "True     767\n",
-       "False    736\n",
-       "Name: sentence, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# number of sentences that appear at least twice\n",
-    "train.sentence.duplicated(keep = False).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "327"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "[767 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
        "3           3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
        "Name: y, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
        "<Axes: ylabel='aspect'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1035,12 +1035,20 @@
        "})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "config = {\n",
+    "    # data preprocessing\n",
+    "    \"input_enrichment\": \"question_sentence\",\n",
+    "    \n",
+    "    # pre-trained language model (transformer)\n",
+    "    \"plm_name\": \"bert-base-cased\",\n",
+    "}\n",
+    "\n",
     "aspect_in_nl = {\n",
     "    \"AMBIENCE#GENERAL\": \"How is the general ambience of the $T$?\",\n",
     "    \"DRINKS#PRICES\": \"How are the prices of the drinks called $T$?\",\n",
@@ -1057,8 +1065,8 @@
     "}\n",
     "\n",
     "# preprocess data to get model inputs and labels\n",
-    "train_prep = prepData.preprocess(train, enrich_inputs = \"aspect_target_sentence\")\n",
-    "dev_prep   = prepData.preprocess(dev , enrich_inputs = \"aspect_target_sentence\")\n",
+    "train_prep = prepData.preprocess(train, config)\n",
+    "dev_prep   = prepData.preprocess(dev  , config)\n",
     "\n",
     "# transform into huggingface dataset\n",
     "hf_train = Dataset.from_pandas(train_prep)\n",
@@ -1070,19 +1078,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"[CLS] What is the ambience like at the [unused99] seating? [SEP] short and sweet – [unused99] seating is great:it's romantic,cozy and private. [SEP] [unused99] seating [SEP]\""
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "train_prep.inputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# HF name of the selected pre-trained language model (PLM):\n",
     "plm_name = 'bert-base-cased'\n",
@@ -1117,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1148,7 @@
        ")"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,37 +1159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09e796f7873745ac84a6e47d3a3f9633",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97ac8aa62a5f4f9a8c8f7dd6f3966d18",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
@@ -1181,7 +1171,7 @@
        "})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,31 +1192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "tensor([[0, 0, 1],\n",
-      "        [1, 0, 0],\n",
-      "        [1, 0, 0],\n",
-      "        [0, 0, 1],\n",
-      "        [0, 0, 1],\n",
-      "        [1, 0, 0],\n",
       "        [0, 0, 1],\n",
       "        [0, 0, 1],\n",
       "        [0, 0, 1],\n",
       "        [0, 0, 1],\n",
-      "        [0, 1, 0],\n",
+      "        [0, 0, 1],\n",
+      "        [0, 0, 1],\n",
+      "        [0, 0, 1],\n",
+      "        [0, 0, 1],\n",
+      "        [0, 0, 1],\n",
+      "        [0, 0, 1],\n",
       "        [0, 0, 1]])\n"
      ]
     }
@@ -1245,16 +1228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.optim.lr_scheduler.LambdaLR at 0x1a25f8c9180>"
+       "<torch.optim.lr_scheduler.LambdaLR at 0x17bdb48aa10>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,13 +1274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a206d655d3c4383a825e856cdd951c9",
+       "model_id": "6b8e733f4a1e4e3288aab2b0c7b798c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1312,8 +1295,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Acc: 0.7984, Dev Acc: 0.8191\n",
-      "Train Acc: 0.9049, Dev Acc: 0.8271\n"
+      "Train Acc: 0.8064, Dev Acc: 0.8191\n",
+      "Train Acc: 0.8989, Dev Acc: 0.8271\n"
      ]
     }
    ],
@@ -1359,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
